--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             src="https://sceneview.github.io/assets/models/MaterialSuite.glb"
             alt="Bold [3D]"
             ar
-            ar-modes="webxr"
+            ar-modes="webxr scene-viewer quick-look"
             style="width: 100%; height: 100%; position: absolute; left: 0px; top: 0px; z-index: 0; display: block;">
             <button slot="ar-button" id="ar-button" style="width : 25%; height: 25%">
                 View in your space
